Modified Details.cshtml, RegisterViewModel.cs. Changed user models - user now have user name and full name.

--- a/Interactive/Interactive/Views/Home/Index.cshtml
+++ b/Interactive/Interactive/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                 <small>Posted on <i>@post.Date</i></small>
                 @if (post.Author != null)
                 {
-                    @:by <i>@post.Author.FullName (@post.Author.UserName)</i>
+                    @:by <i>@post.Author.Name (@post.Author.UserName)</i>
                 }
             </div>
             <div class="body">
