--- a/Interactive/Interactive/Views/Posts/Details.cshtml
+++ b/Interactive/Interactive/Views/Posts/Details.cshtml
@@ -34,11 +34,11 @@
             @Html.DisplayFor(model => model.Date)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Author.FullName)
+            @Html.DisplayNameFor(model => model.Author)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Author.FullName)
+            @Html.DisplayFor(model => model.Author.Name)
         </dd>
 
     </dl>
