Added services and changed base logic

--- a/Interactive/Interactive/Views/Home/Index.cshtml
+++ b/Interactive/Interactive/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
     @foreach (var post in Model)
     {
         <article class="post col-md-6 col-md-offset-3">
-            <h2 class="title">@post.Title</h2>
+            <h2 class="title"><strong>@post.Title</strong></h2>
 
             <div class="about">
                 <small>Posted on <i>@post.Date</i></small>
