Created service layer for the Posts Controller.

--- a/Interactive/Interactive/Views/Posts/Create.cshtml
+++ b/Interactive/Interactive/Views/Posts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Interactive.Models.EntityModels.Post
+﻿@model Interactive.Models.ViewModels.PostViewModel
 
 @{
     ViewBag.Title = "Create";
