--- a/Interactive/Interactive/Views/Posts/Index.cshtml
+++ b/Interactive/Interactive/Views/Posts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using Interactive.Extensions
+﻿@using Interactive.Services.Extensions
 @model IEnumerable<Interactive.Models.EntityModels.Post>
 
 @{
