--- a/Interactive/Interactive/Views/Shared/_Notifications.cshtml
+++ b/Interactive/Interactive/Views/Shared/_Notifications.cshtml
@@ -1,4 +1,4 @@
-@using Interactive.Extensions
+@using Interactive.Services.Extensions
 
 @{
     var errorList = Html.GetNotifications(NotificationType.ERROR);
